added view class

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
 	<div class="app">
 		<div class="window">
-			<ul class="content">
-				<li class="item one"><img src="./public/img/comp_plate_promo1.png"></li>
-				<li class="item two"><img src="./public/img/comp_plate_promo2.png"></li>
-			</ul>			
+			<ul class="content"></ul>			
 		</div>
-		<button>CLICK</button>
+		<button class="next">Next</button>
+		<button class="prev">Prev</button>
 	</div>
 </body>
 </html>
