--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8"/>
 	<title>EPAM test task</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
 	<script type="text/javascript" src="./lib/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="./init.js"></script>
 </head>
 <body>
 	<div class="app">
 		<div class="window">
-			<ul class="content"></ul>			
+			<ul class="content list-inline"></ul>			
 		</div>
 		<button class="next">Next</button>
 		<button class="prev">Prev</button>
