--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
 	<script type="text/javascript" src="./lib/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="./init.js"></script>
+	<script type="text/javascript" src="./slider.js"></script>
 </head>
 <body>
 	<div class="app">
-		<div class="window">
-			<ul class="content list-inline"></ul>			
+		<div class="TRUEslider_wrapper">
+			<ul class="slider_wrapper"></ul>			
 		</div>
 		<button class="next">Next</button>
 		<button class="prev">Prev</button>
