--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
 	<title>EPAM test task</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
-	<script type="text/javascript" src="./lib/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="./lib/js/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="./lib/js/bootstrap.js"></script>
 	<script type="text/javascript" src="./init.js"></script>
 	<script type="text/javascript" src="./slider.js"></script>
 </head>
 <body>
 	<div class="app">
-		<div class="TRUEslider_wrapper">
-			<ul class="slider_wrapper"></ul>			
+		<div class="slider_wrapper panel panel-default">
+			<div class="panel-body">
+				<ul class="items"></ul>
+			</div>
+			<div class="panel-footer">
+				<button class="prev">Prev</button>
+				<button class="next">Next</button>
+				<a href=""></a>
+			</div>	
 		</div>
-		<button class="next">Next</button>
-		<button class="prev">Prev</button>
 	</div>
 </body>
 </html>
