--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
 	<script type="text/javascript" src="./lib/js/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="./lib/js/bootstrap.js"></script>
 	<script type="text/javascript" src="./init.js"></script>
 	<script type="text/javascript" src="./slider.js"></script>
 </head>
@@ -17,9 +16,9 @@
 				<ul class="items"></ul>
 			</div>
 			<div class="panel-footer">
-				<button class="prev">Prev</button>
-				<button class="next">Next</button>
-				<a href=""></a>
+				<a href="#" class="prev">Prev</a>
+				<a href="#" class="next">Next</a>
+				<a href="#" class="find">Find a store</a>
 			</div>	
 		</div>
 	</div>
