--- a/index.html
+++ b/index.html
@@ -6,21 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
 	<script type="text/javascript" src="./lib/js/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="./init.js"></script>
 	<script type="text/javascript" src="./slider.js"></script>
 </head>
 <body>
-	<div class="app">
-		<div class="slider_wrapper panel panel-default">
-			<div class="panel-body">
-				<ul class="items"></ul>
-			</div>
-			<div class="panel-footer">
-				<a href="#" class="prev">Prev</a>
-				<a href="#" class="next">Next</a>
-				<a href="#" class="find">Find a store</a>
-			</div>	
-		</div>
-	</div>
+	<div class="app"></div>
 </body>
 </html>
